--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -27,6 +27,15 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>log4j.properties</exclude>
+                </excludes>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.felix</groupId>
@@ -42,7 +51,6 @@
 						<Export-Package></Export-Package>
 						<Private-Package></Private-Package>
 						<Import-Package></Import-Package>
-						<Include-Resource></Include-Resource>
                         <DynamicImport-Package></DynamicImport-Package>
                     </instructions>
                 </configuration>
